src/test/resources/model_test/invalid/FourEntities_model/Employee.entity
Employee {
	id : int { @Id  @NotNull }; // the id
	firstName : string { @NotNull @SizeMin(1)  @SizeMax(30) };
}
